<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sampleprocess.MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <EditText
            android:id="@+id/device_CW_addr_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/device_CW_addr_default_text"
            app:layout_constraintStart_toStartOf="@+id/device_CW_addr_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/device_CW_addr_label_textView"
            tools:text="@string/device_CW_addr_default_text" />

        <TextView
            android:id="@+id/device_CW_addr_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/device_CW_addr_label"
            app:layout_constraintStart_toStartOf="@+id/device_SW_addr_editText"
            app:layout_constraintTop_toBottomOf="@+id/device_SW_addr_editText"
            tools:text="@string/device_CW_addr_label" />

        <EditText
            android:id="@+id/device_SW_addr_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/device_SW_addr_default_text"
            app:layout_constraintStart_toStartOf="@+id/device_SW_addr_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/device_SW_addr_label_textView"
            tools:text="@string/device_SW_addr_default_text" />

        <TextView
            android:id="@+id/device_SW_addr_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:text="@string/device_SW_addr_label"
            app:layout_constraintStart_toStartOf="@+id/port_input_editText"
            app:layout_constraintTop_toBottomOf="@+id/port_input_editText"
            tools:text="@string/device_SW_addr_label" />

        <TextView
            android:id="@+id/ping_result_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_result_pinging_text"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/ping_ip_button"
            app:layout_constraintStart_toStartOf="@+id/ping_ip_button"
            app:layout_constraintTop_toBottomOf="@+id/ping_ip_button"
            tools:text="@string/ping_result_pinging_text" />

        <Button
            android:id="@+id/ping_ip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/ping_ip_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/IP_input_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IP_input_editText"
            app:layout_constraintTop_toTopOf="@+id/IP_input_editText"
            tools:text="@string/ping_ip_button_text" />

        <TextView
            android:id="@+id/IP_input_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ip_input_label_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/ip_input_label_settings" />

        <EditText
            android:id="@+id/IP_input_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ip_input_default_text"
            app:layout_constraintStart_toStartOf="@+id/IP_input_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/IP_input_label_textView"
            tools:text="@string/ip_input_default_text" />

        <TextView
            android:id="@+id/port_input_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/port_input_label_settings"
            app:layout_constraintStart_toStartOf="@+id/IP_input_editText"
            app:layout_constraintTop_toBottomOf="@+id/IP_input_editText"
            tools:text="@string/port_input_label_settings" />

        <EditText
            android:id="@+id/port_input_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/port_input_default_text"
            app:layout_constraintStart_toStartOf="@+id/port_input_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/port_input_label_textView"
            tools:text="@string/port_input_default_text" />

        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save_setting_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>